--- a/CSS/eventStyle-technical.css
+++ b/CSS/eventStyle-technical.css
@@ -127,7 +127,7 @@ header {
 
 .card:hover {
     transform: translateY(-10px);
-    box-shadow: 0 4px 20px rgba(255, 0, 255, 0.7), 0 4px 20px rgba(0, 255, 255, 0.7);
+    box-shadow: 0 0 15px #00ffcc, 0 0 30px #0077ff;;
     border-color: rgb(255, 0, 255);
 }
 
@@ -222,13 +222,78 @@ header {
     padding-right: 15px;
 }
 
-.popup h3 {
+.popup h2 {
     margin: 0 0 10px;
+    font-family: 'Poppins';
+    letter-spacing: 3px;
+    font-size: 45px;
+}
+
+.popDesc {
+    background : linear-gradient(45deg, #0077ff, #8000ff);
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 1.5;
+    border-radius: 10px;
+    padding: 5px 10px;
+    font-family: Poppins;
+}
+
+.popTeam {
+    background : linear-gradient(45deg, #0077ff, #8000ff);
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 1.5;
+    border-radius: 10px;
+    padding: 5px 10px;
+    font-family: Poppins;
+}
+
+.popFees {
+    background : linear-gradient(45deg, #0077ff, #8000ff);
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 1.5;
+    border-radius: 10px;
+    padding: 5px 10px;
+    font-family: Poppins;
+}
+
+.popPrizes {
+    background : linear-gradient(45deg, #d7833e, #ff0084);
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 1.5;
+    border-radius: 10px;
+    padding: 5px 10px;
+    font-family: Poppins;
 }
 
 .popup p {
     line-height: 1.5;
     margin-bottom: 15px;
+}
+
+.Register-btn {
+    padding: 12px 24px;
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    color: white;
+    background: linear-gradient(120deg, #db2777, #cf7733);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    max-width: 200px;
+}
+
+.Register-btn:hover {
+    background: linear-gradient(135deg, #afbb57, #db2777);
+    box-shadow: 0 0 10px rgba(6, 182, 212, 0.7), 0 0 20px rgba(236, 72, 153, 0.7);
 }
 
 .close-btn {
@@ -244,6 +309,30 @@ header {
     transition: transform 0.3s ease, color 0.3s ease;
 }
 
+.popRules {
+    background : linear-gradient(45deg, #0077ff, #8000ff);
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 1.5;
+    border-radius: 10px;
+    padding: 5px 10px;
+    font-family: Poppins;
+}
+
+.popLoc, .popDate, .popContact {
+    background : linear-gradient(45deg, #0077ff, #8000ff);
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 1.5;
+    border-radius: 10px;
+    padding: 5px 10px;
+    font-family: Poppins;
+}
+
+#popup-rules {
+    list-style-type: disc;;
+    border-radius: 10px;
+}
 .close-btn:hover {
     transform: scale(1.2);
     color: #ff33ff;
