--- a/CSS/eventStyle-cultural.css
+++ b/CSS/eventStyle-cultural.css
@@ -147,7 +147,7 @@ header {
 
 .image-container img {
     width: 100%;
-    height: auto;
+    height: 400px;
     transition: transform 0.5s ease;
 }
 
@@ -367,6 +367,10 @@ header {
         padding-right: 0;
         order: 2;
     }
+
+    .image-container img {
+        height: auto;
+    }
 }
 
 @media (max-width: 600px) {
@@ -403,6 +407,11 @@ header {
         overflow-y: auto;
         order: 2;
     }
+
+    .image-container img {
+        height: auto;
+    }
+
 }
 
 footer .footer_width h2 {
