--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1215,3 +1215,25 @@ footer {
         margin-bottom: 12px;
     }
 }
+
+.event-date {
+    font-weight: 900;
+    color: rgb(233, 146, 17);
+    text-shadow: 0 5px 10px #0ff, 0 0 20px #0ff, 0 0 40px #00f;
+    letter-spacing: 10px;
+    font-family: 'Orbitron', sans-serif;
+    animation: glowPulse 1.5s infinite alternate ease-in-out;
+    position: relative;
+    display: inline-block;
+}
+
+@keyframes glowPulse {
+    0% {
+        text-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #00f;
+        transform: scale(1);
+    }
+    100% {
+        text-shadow: 0 0 15px #0ff, 0 0 30px #0ff, 0 0 50px #00f;
+        transform: scale(1.05);
+    }
+}
